# OS

./: .gitignore  README.md
include/: employee.h
lab1/: CMakeLists.txt  README.md
lab1/src/: Creator.cpp  Main.cpp
lab1/tests/: test_processes.cpp
lab2/: CMakeLists.txt  README.md
lab2/include/: thread_lab.h
lab2/lib/: thread_functions.cpp
lab2/src/: main.cpp
lab2/tests/: test_threads.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: sync_lab.h
lab3/lib/: sync_functions.cpp
lab3/src/: main.cpp
lab3/tests/: test_sync.cpp
lab4/: CMakeLists.txt
lab4/src/: common.h  receiver.cpp  sender.cpp
lab4/tests/: test_queue.cpp
lab5/: CMakeLists.txt
lab5/include/: common.h
lab5/src/: client.cpp  server.cpp
lab5/tests/: test_pipe.cpp
src/: Reporter.cpp
